# router/auth_users.ts
@@ -1,8 +1,6 @@
 import express, { Request, Response, Router } from 'express';
 import jwt from 'jsonwebtoken';
-import session, { Session } from 'express-session';
 import books from './booksdb';
-
 // declare module 'express-session' {
 //   interface SessionData {
 //     authorization?: { username: string,  accessToken: string}; // Your custom session data properties
@@ -10,6 +8,8 @@ import books from './booksdb';
 // }
 
 const regd_users: Router = express.Router();
+
+
 
 const users: { username: string; password: string }[] = [{ username: 'admin', password: 'admin' }];
 
@@ -30,6 +30,14 @@ const authenticatedUser = (username: string, password: string): boolean => {
 // 登录路由中使用会话
 
 regd_users.post('/login', (req: Request, res: Response) => {
+/*  #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Login with username and password',
+        schema: {
+            $username: 'JohnDoe',
+            $password: '123456'
+        }
+} */
   const username: string = req.body.username;
   const password: string = req.body.password;
 
@@ -52,7 +60,10 @@ regd_users.post('/login', (req: Request, res: Response) => {
   }
 });
 
+
 regd_users.put('/auth/review/:isbn', (req: Request, res: Response) => {
+//  #swagger.description = 'Add/edit review to request body and pass in isbn as query parameter'
+
   const isbn: number = +req.params.isbn; // 使用+将参数转换为数字
   const review: string = req.body.review;
   const username = req.user.data;
@@ -83,39 +94,5 @@ regd_users.put('/auth/review/:isbn', (req: Request, res: Response) => {
   }
 
 });
-
-// 在书评路由中使用会话
-// regd_users.put('/auth/review/:isbn', (req: Request, res: Response) => {
-//   const isbn: number = +req.params.isbn; // 使用+将参数转换为数字
-//   const review: string = req.body.review;
-  
-//   // 从 req.session.user 中获取用户信息
-//   const session = req.session as Session;
-//   const username = req.session.authorization.username;
-
-//   if (!isbn || !review || !user) {
-//     return res.status(400).json({ message: 'Invalid request. ISBN, review, and authentication are required.' });
-//   }
-
-//   const username: string | undefined = user.username;
-
-//   const filteredReviews = books[isbn]?.reviews.filter((r) => {
-//     return r.username === username;
-//   });
-
-//   if (filteredReviews?.length > 0) {
-//     const existingReview = filteredReviews[0];
-//     existingReview.review = review;
-//     return res.status(200).json({ message: 'Review modified successfully.' });
-//   } else {
-//     // Add a new review
-//     const newReview = {
-//       username: username,
-//       review: review,
-//     };
-//     books[isbn]?.reviews.push(newReview);
-//     return res.status(200).json({ message: 'Review added successfully.' });
-//   }
-// });
 
 export { regd_users, isValid, users };
